[tool.poetry]
name = "incolumepy.curso.how-to-add-authentication-to-your-app-with-flask-login"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
